Assert that only one target is in INSTALL_TARGET_LIST

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,10 @@ else()
 
     get_filename_component(TVS_IO_TVM_FILE_DIR ${TVM_FILE_DIR_ARG} ABSOLUTE)
     if(TVS_IO_PER_TARGET_CONFIG)
+        list(LENGTH INSTALL_TARGET_LIST INSTALL_TARGET_COUNT)
+        if(NOT ${INSTALL_TARGET_COUNT} EQUAL 1)
+            message(FATAL_ERROR "TVS_IO per-target configuration only works with one target in INSTALL_TARGET_LIST")
+        endif()
         set(TVS_IO_TVM_FILE_DIR "${TVS_IO_TVM_FILE_DIR}/${INSTALL_TARGET_LIST}/*")
     else()
         set(TVS_IO_TVM_FILE_DIR "${TVS_IO_TVM_FILE_DIR}/*")
